compiler/test/type_check/bad_array_index.c2po
STRUCT
    Test: { I: int[]; };

INPUT
    i0,i1,i2: int;

DEFINE
    s := {i0,i1,i2};
    t := Test(s);

FTSPEC
    F[0,1] (t.I[3] < 3);